--- a/beszel/site/src/locales/de/de.po
+++ b/beszel/site/src/locales/de/de.po
@@ -305,7 +305,7 @@ msgstr "Dokumentation"
 #: src/components/systems-table/systems-table.tsx
 #: src/components/routes/system.tsx
 msgid "Down"
-msgstr ""
+msgstr "Offline"
 
 #: src/components/add-system.tsx
 #: src/components/systems-table/systems-table.tsx
@@ -461,7 +461,7 @@ msgstr "Anzeige- und Benachrichtigungseinstellungen verwalten."
 
 #: src/components/add-system.tsx
 msgid "Manual setup instructions"
-msgstr ""
+msgstr "Anleitung zur manuellen Einrichtung"
 
 #. Chart select field. Please try to keep this short.
 #: src/components/routes/system.tsx
@@ -727,7 +727,7 @@ msgstr "Tabelle"
 #. Temperature label in systems table
 #: src/components/systems-table/systems-table.tsx
 msgid "Temp"
-msgstr ""
+msgstr "Temperatur"
 
 #: src/lib/utils.ts
 #: src/components/routes/system.tsx
@@ -884,3 +884,4 @@ msgstr "YAML-Konfiguration"
 #: src/components/routes/settings/layout.tsx
 msgid "Your user settings have been updated."
 msgstr "Deine Benutzereinstellungen wurden aktualisiert."
+
