--- a/beszel/site/src/locales/hr/hr.po
+++ b/beszel/site/src/locales/hr/hr.po
@@ -114,14 +114,10 @@ msgstr "Prosjek"
 msgid "Average CPU utilization of containers"
 msgstr "Prosječna iskorištenost procesora u spremnicima"
 
-#. placeholder {0}: isEditingValue ? ( <input type="text" value={inputValue} onChange={(e) => setInputValue(e.target.value)} onBlur={handleInputValueBlur} onKeyDown={(e) => e.key === "Enter" && handleInputValueBlur()} className="w-12 bg-transparent border-b border-primary outline-none text-center" autoFocus /> ) : ( <> {value} {data.alert.unit} </> )
+#. placeholder {0}: data.alert.unit
 #: src/components/alerts/alerts-system.tsx
-msgid "Average exceeds <0>{0}</0>"
-msgstr ""
-
-#: src/components/alerts/alerts-system.tsx
-#~ msgid "Average exceeds <0>{value}{0}</0>"
-#~ msgstr "Prosjek premašuje <0>{value}{0}</0>"
+msgid "Average exceeds <0>{value}{0}</0>"
+msgstr "Prosjek premašuje <0>{value}{0}</0>"
 
 #: src/components/routes/system.tsx
 msgid "Average power consumption of GPUs"
@@ -380,14 +376,9 @@ msgstr "Ažuriranje upozorenja nije uspjelo"
 msgid "Filter..."
 msgstr "Filter..."
 
-#. placeholder {0}: isEditingMin ? ( <input type="number" value={inputMin} onChange={(e) => setInputMin(e.target.value)} onBlur={handleInputMinBlur} onKeyDown={(e) => e.key === "Enter" && handleInputMinBlur()} className="w-12 bg-transparent border-b border-primary outline-none text-center" autoFocus /> ) : ( min )
 #: src/components/alerts/alerts-system.tsx
-msgid "For <0>{0}</0> {min, plural, one {minute} other {minutes}}"
-msgstr ""
-
-#: src/components/alerts/alerts-system.tsx
-#~ msgid "For <0>{min}</0> {min, plural, one {minute} other {minutes}}"
-#~ msgstr "Za <0>{min}</0> {min, plural, one {minutu} other {minute}}"
+msgid "For <0>{min}</0> {min, plural, one {minute} other {minutes}}"
+msgstr "Za <0>{min}</0> {min, plural, one {minutu} other {minute}}"
 
 #: src/components/login/auth-form.tsx
 msgid "Forgot password?"
@@ -429,21 +420,6 @@ msgstr "Nevažeća adresa e-pošte."
 msgid "Kernel"
 msgstr "Kernel"
 
-#. Load average 1 minute
-#: src/components/systems-table/systems-table.tsx
-msgid "LA 1"
-msgstr ""
-
-#. Load average 15 minutes
-#: src/components/systems-table/systems-table.tsx
-msgid "LA 15"
-msgstr ""
-
-#. Load average 5 minutes
-#: src/components/systems-table/systems-table.tsx
-msgid "LA 5"
-msgstr ""
-
 #: src/components/routes/settings/general.tsx
 msgid "Language"
 msgstr "Jezik"
@@ -456,22 +432,6 @@ msgstr "Izgled"
 #: src/components/mode-toggle.tsx
 msgid "Light"
 msgstr "Svijetlo"
-
-#: src/lib/utils.ts
-msgid "Load Average 1"
-msgstr ""
-
-#: src/lib/utils.ts
-msgid "Load Average 15"
-msgstr ""
-
-#: src/lib/utils.ts
-msgid "Load Average 5"
-msgstr ""
-
-#: src/components/systems-table/systems-table.tsx
-#~ msgid "Load Avg 1"
-#~ msgstr ""
 
 #: src/components/navbar.tsx
 msgid "Log Out"
@@ -834,18 +794,6 @@ msgstr "Pokreće se kada kombinacija gore/dolje premaši prag"
 #: src/lib/utils.ts
 msgid "Triggers when CPU usage exceeds a threshold"
 msgstr "Pokreće se kada iskorištenost procesora premaši prag"
-
-#: src/lib/utils.ts
-msgid "Triggers when load average 1 exceeds a threshold"
-msgstr ""
-
-#: src/lib/utils.ts
-msgid "Triggers when load average 15 exceeds a threshold"
-msgstr ""
-
-#: src/lib/utils.ts
-msgid "Triggers when load average 5 exceeds a threshold"
-msgstr ""
 
 #: src/lib/utils.ts
 msgid "Triggers when memory usage exceeds a threshold"
