--- a/beszel/site/src/locales/ko/ko.po
+++ b/beszel/site/src/locales/ko/ko.po
@@ -114,14 +114,10 @@ msgstr "평균"
 msgid "Average CPU utilization of containers"
 msgstr "컨테이너의 평균 CPU 사용량"
 
-#. placeholder {0}: isEditingValue ? ( <input type="text" value={inputValue} onChange={(e) => setInputValue(e.target.value)} onBlur={handleInputValueBlur} onKeyDown={(e) => e.key === "Enter" && handleInputValueBlur()} className="w-12 bg-transparent border-b border-primary outline-none text-center" autoFocus /> ) : ( <> {value} {data.alert.unit} </> )
+#. placeholder {0}: data.alert.unit
 #: src/components/alerts/alerts-system.tsx
-msgid "Average exceeds <0>{0}</0>"
-msgstr ""
-
-#: src/components/alerts/alerts-system.tsx
-#~ msgid "Average exceeds <0>{value}{0}</0>"
-#~ msgstr "평균이 <0>{value}{0}</0>을(를) 초과합니다"
+msgid "Average exceeds <0>{value}{0}</0>"
+msgstr "평균이 <0>{value}{0}</0>을(를) 초과합니다"
 
 #: src/components/routes/system.tsx
 msgid "Average power consumption of GPUs"
@@ -380,14 +376,9 @@ msgstr "알림 수정 실패"
 msgid "Filter..."
 msgstr "필터..."
 
-#. placeholder {0}: isEditingMin ? ( <input type="number" value={inputMin} onChange={(e) => setInputMin(e.target.value)} onBlur={handleInputMinBlur} onKeyDown={(e) => e.key === "Enter" && handleInputMinBlur()} className="w-12 bg-transparent border-b border-primary outline-none text-center" autoFocus /> ) : ( min )
 #: src/components/alerts/alerts-system.tsx
-msgid "For <0>{0}</0> {min, plural, one {minute} other {minutes}}"
-msgstr ""
-
-#: src/components/alerts/alerts-system.tsx
-#~ msgid "For <0>{min}</0> {min, plural, one {minute} other {minutes}}"
-#~ msgstr "<0>{min}</0> {min, plural, one {분} other {분}} 동안"
+msgid "For <0>{min}</0> {min, plural, one {minute} other {minutes}}"
+msgstr "<0>{min}</0> {min, plural, one {분} other {분}} 동안"
 
 #: src/components/login/auth-form.tsx
 msgid "Forgot password?"
@@ -429,21 +420,6 @@ msgstr "잘못된 이메일 주소입니다."
 msgid "Kernel"
 msgstr "커널"
 
-#. Load average 1 minute
-#: src/components/systems-table/systems-table.tsx
-msgid "LA 1"
-msgstr ""
-
-#. Load average 15 minutes
-#: src/components/systems-table/systems-table.tsx
-msgid "LA 15"
-msgstr ""
-
-#. Load average 5 minutes
-#: src/components/systems-table/systems-table.tsx
-msgid "LA 5"
-msgstr ""
-
 #: src/components/routes/settings/general.tsx
 msgid "Language"
 msgstr "언어"
@@ -456,22 +432,6 @@ msgstr "레이아웃"
 #: src/components/mode-toggle.tsx
 msgid "Light"
 msgstr "밝게"
-
-#: src/lib/utils.ts
-msgid "Load Average 1"
-msgstr ""
-
-#: src/lib/utils.ts
-msgid "Load Average 15"
-msgstr ""
-
-#: src/lib/utils.ts
-msgid "Load Average 5"
-msgstr ""
-
-#: src/components/systems-table/systems-table.tsx
-#~ msgid "Load Avg 1"
-#~ msgstr ""
 
 #: src/components/navbar.tsx
 msgid "Log Out"
@@ -834,18 +794,6 @@ msgstr "업로드와 다운로드 대역폭의 합이 임계값을 초과할 때
 #: src/lib/utils.ts
 msgid "Triggers when CPU usage exceeds a threshold"
 msgstr "CPU 사용량이 임계값을 초과할 때 트리거됩니다."
-
-#: src/lib/utils.ts
-msgid "Triggers when load average 1 exceeds a threshold"
-msgstr ""
-
-#: src/lib/utils.ts
-msgid "Triggers when load average 15 exceeds a threshold"
-msgstr ""
-
-#: src/lib/utils.ts
-msgid "Triggers when load average 5 exceeds a threshold"
-msgstr ""
 
 #: src/lib/utils.ts
 msgid "Triggers when memory usage exceeds a threshold"
