--- a/beszel/site/src/locales/ar/ar.po
+++ b/beszel/site/src/locales/ar/ar.po
@@ -274,10 +274,6 @@ msgstr "القرص"
 msgid "Disk I/O"
 msgstr "إدخال/إخراج القرص"
 
-#: src/components/routes/system.tsx
-msgid "Disk read and write throughput"
-msgstr ""
-
 #: src/lib/utils.ts
 #: src/components/routes/system.tsx
 #: src/components/charts/disk-chart.tsx
@@ -494,20 +490,12 @@ msgid "Net"
 msgstr "الشبكة"
 
 #: src/components/routes/system.tsx
-msgid "Network Interfaces"
-msgstr ""
-
-#: src/components/routes/system.tsx
 msgid "Network traffic of docker containers"
 msgstr "حركة مرور الشبكة لحاويات Docker"
 
 #: src/components/routes/system.tsx
 msgid "Network traffic of public interfaces"
 msgstr "حركة مرور الشبكة للواجهات العامة"
-
-#: src/components/routes/system.tsx
-msgid "Network traffic per interface"
-msgstr ""
 
 #: src/components/command-palette.tsx
 msgid "No results found."
@@ -779,8 +767,8 @@ msgid "Throughput of {extraFsName}"
 msgstr "معدل نقل {extraFsName}"
 
 #: src/components/routes/system.tsx
-#~ msgid "Throughput of root filesystem"
-#~ msgstr "معدل نقل نظام الملفات الجذر"
+msgid "Throughput of root filesystem"
+msgstr "معدل نقل نظام الملفات الجذر"
 
 #: src/components/routes/settings/notifications.tsx
 msgid "To email(s)"
