--- a/beszel/site/src/locales/bg/bg.po
+++ b/beszel/site/src/locales/bg/bg.po
@@ -274,10 +274,6 @@ msgstr "Диск"
 msgid "Disk I/O"
 msgstr "Диск I/O"
 
-#: src/components/routes/system.tsx
-msgid "Disk read and write throughput"
-msgstr ""
-
 #: src/lib/utils.ts
 #: src/components/routes/system.tsx
 #: src/components/charts/disk-chart.tsx
@@ -494,20 +490,12 @@ msgid "Net"
 msgstr "Мрежа"
 
 #: src/components/routes/system.tsx
-msgid "Network Interfaces"
-msgstr ""
-
-#: src/components/routes/system.tsx
 msgid "Network traffic of docker containers"
 msgstr "Мрежов трафик на docker контейнери"
 
 #: src/components/routes/system.tsx
 msgid "Network traffic of public interfaces"
 msgstr "Мрежов трафик на публични интерфейси"
-
-#: src/components/routes/system.tsx
-msgid "Network traffic per interface"
-msgstr ""
 
 #: src/components/command-palette.tsx
 msgid "No results found."
@@ -779,8 +767,8 @@ msgid "Throughput of {extraFsName}"
 msgstr "Пропускателна способност на {extraFsName}"
 
 #: src/components/routes/system.tsx
-#~ msgid "Throughput of root filesystem"
-#~ msgstr "Пропускателна способност на root файловата система"
+msgid "Throughput of root filesystem"
+msgstr "Пропускателна способност на root файловата система"
 
 #: src/components/routes/settings/notifications.tsx
 msgid "To email(s)"
