--- a/beszel/site/src/locales/fa/fa.po
+++ b/beszel/site/src/locales/fa/fa.po
@@ -274,10 +274,6 @@ msgstr "دیسک"
 msgid "Disk I/O"
 msgstr "ورودی/خروجی دیسک"
 
-#: src/components/routes/system.tsx
-msgid "Disk read and write throughput"
-msgstr ""
-
 #: src/lib/utils.ts
 #: src/components/routes/system.tsx
 #: src/components/charts/disk-chart.tsx
@@ -494,20 +490,12 @@ msgid "Net"
 msgstr "شبکه"
 
 #: src/components/routes/system.tsx
-msgid "Network Interfaces"
-msgstr ""
-
-#: src/components/routes/system.tsx
 msgid "Network traffic of docker containers"
 msgstr "ترافیک شبکه کانتینرهای داکر"
 
 #: src/components/routes/system.tsx
 msgid "Network traffic of public interfaces"
 msgstr "ترافیک شبکه رابط‌های عمومی"
-
-#: src/components/routes/system.tsx
-msgid "Network traffic per interface"
-msgstr ""
 
 #: src/components/command-palette.tsx
 msgid "No results found."
@@ -779,8 +767,8 @@ msgid "Throughput of {extraFsName}"
 msgstr "توان عملیاتی {extraFsName}"
 
 #: src/components/routes/system.tsx
-#~ msgid "Throughput of root filesystem"
-#~ msgstr "توان عملیاتی سیستم فایل ریشه"
+msgid "Throughput of root filesystem"
+msgstr "توان عملیاتی سیستم فایل ریشه"
 
 #: src/components/routes/settings/notifications.tsx
 msgid "To email(s)"
