--- a/beszel/site/src/locales/hu/hu.po
+++ b/beszel/site/src/locales/hu/hu.po
@@ -274,10 +274,6 @@ msgstr "Lemez"
 msgid "Disk I/O"
 msgstr "Lemez I/O"
 
-#: src/components/routes/system.tsx
-msgid "Disk read and write throughput"
-msgstr ""
-
 #: src/lib/utils.ts
 #: src/components/routes/system.tsx
 #: src/components/charts/disk-chart.tsx
@@ -494,20 +490,12 @@ msgid "Net"
 msgstr "Hálózat"
 
 #: src/components/routes/system.tsx
-msgid "Network Interfaces"
-msgstr ""
-
-#: src/components/routes/system.tsx
 msgid "Network traffic of docker containers"
 msgstr "Docker konténerek hálózati forgalma"
 
 #: src/components/routes/system.tsx
 msgid "Network traffic of public interfaces"
 msgstr "Nyilvános interfészek hálózati forgalma"
-
-#: src/components/routes/system.tsx
-msgid "Network traffic per interface"
-msgstr ""
 
 #: src/components/command-palette.tsx
 msgid "No results found."
@@ -779,8 +767,8 @@ msgid "Throughput of {extraFsName}"
 msgstr "A {extraFsName} átviteli teljesítménye"
 
 #: src/components/routes/system.tsx
-#~ msgid "Throughput of root filesystem"
-#~ msgstr "A gyökér fájlrendszer átviteli teljesítménye"
+msgid "Throughput of root filesystem"
+msgstr "A gyökér fájlrendszer átviteli teljesítménye"
 
 #: src/components/routes/settings/notifications.tsx
 msgid "To email(s)"
