--- a/beszel/site/src/locales/is/is.po
+++ b/beszel/site/src/locales/is/is.po
@@ -274,10 +274,6 @@ msgstr "Diskur"
 msgid "Disk I/O"
 msgstr ""
 
-#: src/components/routes/system.tsx
-msgid "Disk read and write throughput"
-msgstr ""
-
 #: src/lib/utils.ts
 #: src/components/routes/system.tsx
 #: src/components/charts/disk-chart.tsx
@@ -494,19 +490,11 @@ msgid "Net"
 msgstr "Net"
 
 #: src/components/routes/system.tsx
-msgid "Network Interfaces"
-msgstr ""
-
-#: src/components/routes/system.tsx
 msgid "Network traffic of docker containers"
 msgstr "Net traffík docker kerfa"
 
 #: src/components/routes/system.tsx
 msgid "Network traffic of public interfaces"
-msgstr ""
-
-#: src/components/routes/system.tsx
-msgid "Network traffic per interface"
 msgstr ""
 
 #: src/components/command-palette.tsx
@@ -779,8 +767,8 @@ msgid "Throughput of {extraFsName}"
 msgstr ""
 
 #: src/components/routes/system.tsx
-#~ msgid "Throughput of root filesystem"
-#~ msgstr ""
+msgid "Throughput of root filesystem"
+msgstr ""
 
 #: src/components/routes/settings/notifications.tsx
 msgid "To email(s)"
