--- a/beszel/site/src/locales/nl/nl.po
+++ b/beszel/site/src/locales/nl/nl.po
@@ -274,10 +274,6 @@ msgstr "Schijf"
 msgid "Disk I/O"
 msgstr "Schijf I/O"
 
-#: src/components/routes/system.tsx
-msgid "Disk read and write throughput"
-msgstr ""
-
 #: src/lib/utils.ts
 #: src/components/routes/system.tsx
 #: src/components/charts/disk-chart.tsx
@@ -494,20 +490,12 @@ msgid "Net"
 msgstr "Net"
 
 #: src/components/routes/system.tsx
-msgid "Network Interfaces"
-msgstr ""
-
-#: src/components/routes/system.tsx
 msgid "Network traffic of docker containers"
 msgstr "Netwerkverkeer van docker containers"
 
 #: src/components/routes/system.tsx
 msgid "Network traffic of public interfaces"
 msgstr "Netwerkverkeer van publieke interfaces"
-
-#: src/components/routes/system.tsx
-msgid "Network traffic per interface"
-msgstr ""
 
 #: src/components/command-palette.tsx
 msgid "No results found."
@@ -779,8 +767,8 @@ msgid "Throughput of {extraFsName}"
 msgstr "Doorvoer van {extraFsName}"
 
 #: src/components/routes/system.tsx
-#~ msgid "Throughput of root filesystem"
-#~ msgstr "Doorvoer van het root bestandssysteem"
+msgid "Throughput of root filesystem"
+msgstr "Doorvoer van het root bestandssysteem"
 
 #: src/components/routes/settings/notifications.tsx
 msgid "To email(s)"
