--- a/beszel/site/src/locales/pl/pl.po
+++ b/beszel/site/src/locales/pl/pl.po
@@ -274,10 +274,6 @@ msgstr "Dysk"
 msgid "Disk I/O"
 msgstr "Dysk I/O"
 
-#: src/components/routes/system.tsx
-msgid "Disk read and write throughput"
-msgstr ""
-
 #: src/lib/utils.ts
 #: src/components/routes/system.tsx
 #: src/components/charts/disk-chart.tsx
@@ -494,20 +490,12 @@ msgid "Net"
 msgstr "Sieć"
 
 #: src/components/routes/system.tsx
-msgid "Network Interfaces"
-msgstr ""
-
-#: src/components/routes/system.tsx
 msgid "Network traffic of docker containers"
 msgstr "Ruch sieciowy kontenerów Docker."
 
 #: src/components/routes/system.tsx
 msgid "Network traffic of public interfaces"
 msgstr "Ruch sieciowy interfejsów publicznych"
-
-#: src/components/routes/system.tsx
-msgid "Network traffic per interface"
-msgstr ""
 
 #: src/components/command-palette.tsx
 msgid "No results found."
@@ -779,8 +767,8 @@ msgid "Throughput of {extraFsName}"
 msgstr "Przepustowość {extraFsName}"
 
 #: src/components/routes/system.tsx
-#~ msgid "Throughput of root filesystem"
-#~ msgstr "Przepustowość głównego systemu plików"
+msgid "Throughput of root filesystem"
+msgstr "Przepustowość głównego systemu plików"
 
 #: src/components/routes/settings/notifications.tsx
 msgid "To email(s)"
