--- a/beszel/site/src/locales/pt/pt.po
+++ b/beszel/site/src/locales/pt/pt.po
@@ -274,10 +274,6 @@ msgstr "Disco"
 msgid "Disk I/O"
 msgstr "E/S de Disco"
 
-#: src/components/routes/system.tsx
-msgid "Disk read and write throughput"
-msgstr ""
-
 #: src/lib/utils.ts
 #: src/components/routes/system.tsx
 #: src/components/charts/disk-chart.tsx
@@ -494,20 +490,12 @@ msgid "Net"
 msgstr "Rede"
 
 #: src/components/routes/system.tsx
-msgid "Network Interfaces"
-msgstr ""
-
-#: src/components/routes/system.tsx
 msgid "Network traffic of docker containers"
 msgstr "Tráfego de rede dos contêineres Docker"
 
 #: src/components/routes/system.tsx
 msgid "Network traffic of public interfaces"
 msgstr "Tráfego de rede das interfaces públicas"
-
-#: src/components/routes/system.tsx
-msgid "Network traffic per interface"
-msgstr ""
 
 #: src/components/command-palette.tsx
 msgid "No results found."
@@ -779,8 +767,8 @@ msgid "Throughput of {extraFsName}"
 msgstr "Taxa de transferência de {extraFsName}"
 
 #: src/components/routes/system.tsx
-#~ msgid "Throughput of root filesystem"
-#~ msgstr "Taxa de transferência do sistema de arquivos raiz"
+msgid "Throughput of root filesystem"
+msgstr "Taxa de transferência do sistema de arquivos raiz"
 
 #: src/components/routes/settings/notifications.tsx
 msgid "To email(s)"
