--- a/beszel/site/src/locales/tr/tr.po
+++ b/beszel/site/src/locales/tr/tr.po
@@ -274,10 +274,6 @@ msgstr "Disk"
 msgid "Disk I/O"
 msgstr "Disk G/Ç"
 
-#: src/components/routes/system.tsx
-msgid "Disk read and write throughput"
-msgstr ""
-
 #: src/lib/utils.ts
 #: src/components/routes/system.tsx
 #: src/components/charts/disk-chart.tsx
@@ -494,20 +490,12 @@ msgid "Net"
 msgstr "Ağ"
 
 #: src/components/routes/system.tsx
-msgid "Network Interfaces"
-msgstr ""
-
-#: src/components/routes/system.tsx
 msgid "Network traffic of docker containers"
 msgstr "Docker konteynerlerinin ağ trafiği"
 
 #: src/components/routes/system.tsx
 msgid "Network traffic of public interfaces"
 msgstr "Genel arayüzlerin ağ trafiği"
-
-#: src/components/routes/system.tsx
-msgid "Network traffic per interface"
-msgstr ""
 
 #: src/components/command-palette.tsx
 msgid "No results found."
@@ -779,8 +767,8 @@ msgid "Throughput of {extraFsName}"
 msgstr "{extraFsName} verimliliği"
 
 #: src/components/routes/system.tsx
-#~ msgid "Throughput of root filesystem"
-#~ msgstr "Kök dosya sisteminin verimliliği"
+msgid "Throughput of root filesystem"
+msgstr "Kök dosya sisteminin verimliliği"
 
 #: src/components/routes/settings/notifications.tsx
 msgid "To email(s)"
