--- a/beszel/site/src/locales/uk/uk.po
+++ b/beszel/site/src/locales/uk/uk.po
@@ -274,10 +274,6 @@ msgstr "Диск"
 msgid "Disk I/O"
 msgstr "Дисковий ввід/вивід"
 
-#: src/components/routes/system.tsx
-msgid "Disk read and write throughput"
-msgstr ""
-
 #: src/lib/utils.ts
 #: src/components/routes/system.tsx
 #: src/components/charts/disk-chart.tsx
@@ -494,20 +490,12 @@ msgid "Net"
 msgstr "Мережа"
 
 #: src/components/routes/system.tsx
-msgid "Network Interfaces"
-msgstr ""
-
-#: src/components/routes/system.tsx
 msgid "Network traffic of docker containers"
 msgstr "Мережевий трафік контейнерів Docker"
 
 #: src/components/routes/system.tsx
 msgid "Network traffic of public interfaces"
 msgstr "Мережевий трафік публічних інтерфейсів"
-
-#: src/components/routes/system.tsx
-msgid "Network traffic per interface"
-msgstr ""
 
 #: src/components/command-palette.tsx
 msgid "No results found."
@@ -779,8 +767,8 @@ msgid "Throughput of {extraFsName}"
 msgstr "Пропускна здатність {extraFsName}"
 
 #: src/components/routes/system.tsx
-#~ msgid "Throughput of root filesystem"
-#~ msgstr "Пропускна здатність кореневої файлової системи"
+msgid "Throughput of root filesystem"
+msgstr "Пропускна здатність кореневої файлової системи"
 
 #: src/components/routes/settings/notifications.tsx
 msgid "To email(s)"
