--- a/beszel/site/src/locales/zh-HK/zh-HK.po
+++ b/beszel/site/src/locales/zh-HK/zh-HK.po
@@ -274,10 +274,6 @@ msgstr "磁碟"
 msgid "Disk I/O"
 msgstr "磁碟 I/O"
 
-#: src/components/routes/system.tsx
-msgid "Disk read and write throughput"
-msgstr ""
-
 #: src/lib/utils.ts
 #: src/components/routes/system.tsx
 #: src/components/charts/disk-chart.tsx
@@ -494,20 +490,12 @@ msgid "Net"
 msgstr "網絡"
 
 #: src/components/routes/system.tsx
-msgid "Network Interfaces"
-msgstr ""
-
-#: src/components/routes/system.tsx
 msgid "Network traffic of docker containers"
 msgstr "Docker 容器的網絡流量"
 
 #: src/components/routes/system.tsx
 msgid "Network traffic of public interfaces"
 msgstr "公共接口的網絡流量"
-
-#: src/components/routes/system.tsx
-msgid "Network traffic per interface"
-msgstr ""
 
 #: src/components/command-palette.tsx
 msgid "No results found."
@@ -779,8 +767,8 @@ msgid "Throughput of {extraFsName}"
 msgstr "{extraFsName}的吞吐量"
 
 #: src/components/routes/system.tsx
-#~ msgid "Throughput of root filesystem"
-#~ msgstr "根文件系統的吞吐量"
+msgid "Throughput of root filesystem"
+msgstr "根文件系統的吞吐量"
 
 #: src/components/routes/settings/notifications.tsx
 msgid "To email(s)"
