--- a/beszel/site/src/locales/en/en.po
+++ b/beszel/site/src/locales/en/en.po
@@ -443,6 +443,16 @@ msgstr "Invalid email address."
 msgid "Kernel"
 msgstr "Kernel"
 
+#. Load average 15 minutes
+#: src/components/systems-table/systems-table.tsx
+msgid "L15"
+msgstr "L15"
+
+#. Load average 5 minutes
+#: src/components/systems-table/systems-table.tsx
+msgid "L5"
+msgstr "L5"
+
 #: src/components/routes/settings/general.tsx
 msgid "Language"
 msgstr "Language"
@@ -455,6 +465,14 @@ msgstr "Layout"
 #: src/components/mode-toggle.tsx
 msgid "Light"
 msgstr "Light"
+
+#: src/lib/utils.ts
+msgid "Load Average 15m"
+msgstr "Load Average 15m"
+
+#: src/lib/utils.ts
+msgid "Load Average 5m"
+msgstr "Load Average 5m"
 
 #: src/components/navbar.tsx
 msgid "Log Out"
@@ -822,6 +840,14 @@ msgstr "Tokens allow agents to connect and register. Fingerprints are stable ide
 #: src/components/routes/settings/tokens-fingerprints.tsx
 msgid "Tokens and fingerprints are used to authenticate WebSocket connections to the hub."
 msgstr "Tokens and fingerprints are used to authenticate WebSocket connections to the hub."
+
+#: src/lib/utils.ts
+msgid "Triggers when 15 minute load average exceeds a threshold"
+msgstr "Triggers when 15 minute load average exceeds a threshold"
+
+#: src/lib/utils.ts
+msgid "Triggers when 5 minute load average exceeds a threshold"
+msgstr "Triggers when 5 minute load average exceeds a threshold"
 
 #: src/lib/utils.ts
 msgid "Triggers when any sensor exceeds a threshold"
